--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,30 +1,16 @@
 body { padding: 0; margin: 0 }
-#unitycontainer{background-color: black;
-    display: flex;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    margin: auto;
-    aspect-ratio: 51 / 100;
-    overflow: hidden;
-    align-self: center;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-}
-#unitycanvas{background-color: white;
-    display: grid;
-    position: absolute;
-    height: 100%;
-    width: calc(height*0.51);
-    margin: auto;
-    aspect-ratio: 51 / 100;
-    overflow: hidden;
-    align-self: center;
-    align-items: center;
-    justify-content: center;
-}
+#unity-container { position: absolute }
+#unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
+#unity-container.unity-mobile { position: fixed; width: 100%; height: 100% }
+#unity-canvas { background: #000000 }
+.unity-mobile #unity-canvas { width: 100%; height: 100% }
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
 #unity-progress-bar-empty { width: 141px; height: 18px; margin-top: 10px; margin-left: 6.5px; background: url('progress-bar-empty-dark.png') no-repeat center }
 #unity-progress-bar-full { width: 0%; height: 18px; margin-top: 10px; background: url('progress-bar-full-dark.png') no-repeat center }
+#unity-footer { position: relative }
+.unity-mobile #unity-footer { display: none }
+#unity-webgl-logo { float:left; width: 204px; height: 38px; background: url('webgl-logo.png') no-repeat center }
+#unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
+#unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
+#unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
